--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 html {
   min-width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #EEE2DF;
 }
 
 * {
 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-color: #EED7C5;
-background: #EEE2DF;
+color: #693730;
 }
-
 
 header{
 text-align: center;
-font-size: 32px;
+font-size: 24px;
 }
 
 .heading
 {
-  color: #B36A5E;
+  color: #693730;
 }
 nav ul {
     list-style-type: none;
@@ -25,7 +26,7 @@ nav ul {
     padding: 0;
     overflow: hidden;
     background-color: #C89F9C;
-    font-size: 20px;
+    font-size: 16px;
   }
   
 nav li {
@@ -43,20 +44,44 @@ nav li {
   
   nav li a:hover {
     background-color: #EED7C5;
-    color: #C89F9C;
+    color: #693730;
   }
 
-.content-container
-{
- margin: 3rem;
+  
+.container
+{ 
+    margin: auto;
+    padding: 10px;
+    color: #693730;
+    overflow-x: auto;
 }
-  .content td
+  .hero td
   {
     padding: 24px;
     background-color: #C97C5D;
     margin: 3em;
   }
+.review
+{
+  display:flexbox;
+  background-color: #C89F9C;
+  padding: 19px;
+}
 
+.course-table
+{
+  width: 100%;
+}
+
+.course-table th
+{
+  text-align: left;
+}
+
+.course-table td
+{
+  vertical-align: text-top;
+}
 
   footer
   {
@@ -67,3 +92,14 @@ nav li {
     text-align: center;
     
   }
+
+/*
+För skärmar större än iPhone 14 Pro Max
+*/
+@media only screen and (max-width: 550px)
+{
+ h1
+ {
+  font-size: 32px;
+ }
+}
