--- a/style.css
+++ b/style.css
@@ -12,13 +12,18 @@ color: #693730;
 
 header{
 text-align: center;
-font-size: 24px;
 margin-bottom: 10px;
 }
 h1
 {
-  font-size: 24px;
+  font-size: 30px;
 }
+
+h2
+{
+  font-size: 20;
+}
+
 
 nav ul {
     list-style-type: none;
@@ -66,7 +71,6 @@ nav li {
   grid-template-columns: 100%;
   row-gap: 12px;
   column-gap: 12px;
-  color: #693730;
   align-items: center;
   background-color: #C97C5D;
   margin-bottom: 10px;
@@ -82,11 +86,22 @@ nav li {
   .portrait
   {
     text-align: center;
-    
+    padding-top: 10px;
+  }
+
+
+  .review-container
+  {
+    display: inline-grid;
+    grid-template-columns: 100%;
+    row-gap: 12px;
+    column-gap: 12px;
+    /* align-items: center; */
+    margin-bottom: 10px;
   }
 .review
 {
-  display:flexbox;
+  
   background-color: #C89F9C;
   padding: 19px;
 }
@@ -139,7 +154,16 @@ För skärmar större än iPhone 14 Pro Max
   font-size: 40px;
  }
 
+ nav ul {
+  font-size: 18px;
+ }
+
  .hero-container
+ {
+  grid-template-columns: repeat(2,1fr);
+ }
+
+ .review-container
  {
   grid-template-columns: repeat(2,1fr);
  }
