--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ html {
   background-color: #eee2df;
 }
 
+.twinkle-star-regular {
+  font-family: "Twinkle Star", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #693730;
@@ -36,7 +43,7 @@ footer {
 /* Rubriker*/
 
 h1 {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 h2 {
@@ -133,7 +140,7 @@ För skärmar större än iPhone 14 Pro Max
     font-size: 12px;
   }
   h1 {
-    font-size: 40px;
+    font-size: 60px;
   }
 
   nav ul {
@@ -146,5 +153,15 @@ För skärmar större än iPhone 14 Pro Max
 
   .review-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width:1200px) {
+  h1 {
+    font-size: 80px;
+  }
+  h2 {
+    font-size: 26px;
+
   }
 }
